Bug 204059 - korganizer: kolab-resource: use timezone defined by settings on editing events
Summary: korganizer: kolab-resource: use timezone defined by settings on editing events
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-16 16:44 UTC by Julian G
Modified: 2010-03-15 17:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Sets the timezone in the editor to the local timezone, if it's in UTC (880 bytes, patch)
2009-08-22 19:06 UTC, Steffen Hanikel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julian G 2009-08-16 16:44:40 UTC
Version:            (using KDE 4.3.0)
OS:                Linux
Installed from:    Fedora RPMs

How to Reproduce:
Korganizer with Kolab resource
Create a new event with timezone e.g. Europe/Vienna
Open event again for editing - timezone is still there
Close Korganizer/Kontact and start it again
Now open the event again
Timezone is gone, it just says UTC, times are properly converted to UTC

Technically this behavour is correct because of the Kolab event storage format, which requires time in UTC and the leading Z indicates UTC, but the usual office user becomes confused and annoyed.
http://kolab.org/doc/kolabformat-2.0rc7-html/x123.html#AEN143

IMHO it would be best to set the timezone defined in korganizer settings.
Comment 1 Steffen Hanikel 2009-08-22 19:06:42 UTC
Created attachment 36360 [details]
Sets the timezone in the editor to the local timezone, if it's in UTC
Comment 2 Allen Winter 2009-09-02 20:43:07 UTC
SVN commit 1019064 by winterz:

show UTC incidences in the local time zone, which is especially useful
for Kolab users who see all their incidences in UTC.

Based on a patch from Steffen Hanikel. Thanks!

BUG: 204059
MERGE: e35,e4,4.3


 M  +10 -2     koeditorgeneralevent.cpp  
 M  +6 -2      koeditorgeneraljournal.cpp  
 M  +13 -9     koeditorgeneraltodo.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1019064
Comment 3 Allen Winter 2009-09-02 21:14:46 UTC
SVN commit 1019073 by winterz:

Backport r1019064 by winterz from trunk to the 4.3 branch:

show UTC incidences in the local time zone, which is especially useful
for Kolab users who see all their incidences in UTC.

Based on a patch from Steffen Hanikel. Thanks!

CCBUG: 204059
MERGE: e35,e4,4.3



 M  +10 -2     koeditorgeneralevent.cpp  
 M  +6 -2      koeditorgeneraljournal.cpp  
 M  +13 -9     koeditorgeneraltodo.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1019073
Comment 4 Sergio Martins 2010-03-14 19:01:51 UTC
(In reply to comment #1)
> Created an attachment (id=36360) [details]
> Sets the timezone in the editor to the local timezone, if it's in UTC

What if you're not using kolab? In that case all UTC events will be displayed wrong.
Comment 5 Sergio Martins 2010-03-15 17:35:20 UTC
(In reply to comment #4)
> (In reply to comment #1)
> > Created an attachment (id=36360) [details] [details]
> > Sets the timezone in the editor to the local timezone, if it's in UTC
> 
> What if you're not using kolab? In that case all UTC events will be displayed
> wrong.

They were displayed wrong because of a bug in my configuration. Sorry.