show UTC incidences in the local time zone, which is especially useful for Kolab users who see all their incidences in UTC.

Based on a patch from Steffen Hanikel. Thanks!

BUG: 204059
MERGE: e35,e4,4.3

svn path=/trunk/KDE/kdepim/; revision=1019064